o.c.domain.desy.test: removed warnings